--- a/GroupUp/Web.config
+++ b/GroupUp/Web.config
@@ -21,7 +21,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-    <globalization culture="en-US" uiCulture="en-US" />
+    <globalization culture="en-GB" uiCulture="en-GB" />
   </system.web>
   <system.webServer>
     <modules>
